# tauri-plugin-rekognition-liveness

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  package.json  pnpm-lock.yaml
.github/workflows/: publish-crates.yml  publish-npm.yml
android/: build.gradle.kts  proguard-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/java/: RekognitionLivenessPlugin.kt
examples/tauri-plugin-rekognition-liveness-demo/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
examples/tauri-plugin-rekognition-liveness-demo/src/: App.svelte  main.js  style.css
examples/tauri-plugin-rekognition-liveness-demo/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
examples/tauri-plugin-rekognition-liveness-demo/src-tauri/capabilities/: default.json
examples/tauri-plugin-rekognition-liveness-demo/src-tauri/src/: lib.rs  main.rs
examples/tauri-plugin-rekognition-liveness-demo/src/lib/: aws.js
guest-js/: index.ts
ios/: Package.swift
ios/Sources/: RekognitionLivenessPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: detect_liveness.toml
permissions/schemas/: schema.json
scripts/: bootstrap-ios-caches.sh  setup.mjs
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
