[package]
name = "tauri-plugin-rekognition-liveness-demo"
version = "0.1.0"
description = "Standalone demo of tauri-plugin-rekognition-liveness."
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tauri_plugin_rekognition_liveness_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", default-features = false, features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
tauri-plugin-rekognition-liveness = { path = "../../../" }
